Cleaning up console logs from memory game and some minor refactors. Added second game whack-a-mole, mostly the initial setup.

--- a/memory-game/memory-game.html
+++ b/memory-game/memory-game.html
@@ -9,12 +9,8 @@
 </head>
 
 <body>
-  <nav class="nav">
-    <ul class="nav-menu">
-      <li id="nav-menu__about">About</li>
-    </ul>
-  </nav>
   <main>
+    <div>Score: <span class="score">0</span></div>
     <div class="board"></div>
   </main>
 
